--- a/css/style.css
+++ b/css/style.css
@@ -1,95 +1,9 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@import './global/global.css';
+@import './utilidades/tipografia.css';
+@import './utilidades/cores.css';
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
+@import './global/header.css';
 
-ul {
-  list-style: none;
-}
+@import './utilidades/componentes.css';
 
-a {
-  text-decoration: none;
-}
-
-.header-bg {
-  background: #061040;
-}
-
-.header {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.header-menu {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 40px;
-}
-
-.header-menu a {
-  color: #ffffff;
-  padding: 16px 0;
-  display: inline-block;
-  font-size: 18px;
-  position: relative;
-}
-
-.header-menu a:after {
-  content: '';
-  display: block;
-  height: 2px;
-  width: 0px;
-  background: #fff;
-  margin-top: 4px;
-  transition: 0.3s;
-  position: absolute;
-}
-
-.header-menu a:hover:after {
-  width: 100%;
-}
-
-@media (max-width: 800px) {
-  .header-menu {
-    gap: 20px;
-  }
-
-  .header-menu a {
-    background: linear-gradient(121.91deg, #345ec2 5.33%, #113896 93.8%);
-    padding: 12px 16px;
-    border-radius: 4px;
-    transition: 0.3s;
-  }
-
-  .header-menu a:hover {
-    background: #ffffff;
-    color: #345ec2;
-  }
-
-  .header-menu a:after {
-    display: none;
-  }
-}
-
-@media (max-width: 600px) {
-  .header-menu {
-    gap: 12px;
-  }
-
-  .header-menu a {
-    padding: 8px 12px;
-    font-size: 14px;
-  }
-}
+@import './home/introducao.css';
