--- a/css/global/global.css
+++ b/css/global/global.css
@@ -1,3 +1,7 @@
+:root {
+  font-size: 62.5%;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -21,4 +25,5 @@ a {
 img {
   max-width: 100%;
   display: block;
+  border-radius: 4px;
 }
