--- a/css/global/header.css
+++ b/css/global/header.css
@@ -1,7 +1,3 @@
-.header-bg {
-  background: #061040;
-}
-
 .header {
   display: flex;
   flex-wrap: wrap;
@@ -21,12 +17,8 @@
 }
 
 .header-menu a {
-  font-family: 'Saira', sans-serif;
-  font-weight: 500;
-  color: #ffffff;
   padding: 16px 0;
   display: inline-block;
-  font-size: 18px;
   position: relative;
 }
 
@@ -34,8 +26,8 @@
   content: '';
   display: block;
   height: 2px;
-  width: 0px;
-  background: #fff;
+  width: 0;
+  background: var(--cor-11);
   margin-top: 4px;
   transition: 0.3s;
   position: absolute;
@@ -55,11 +47,12 @@
     padding: 12px 16px;
     border-radius: 4px;
     transition: 0.3s;
+    color: var(--cor-0);
   }
 
   .header-menu a:hover {
     background: #ffffff;
-    color: #345ec2;
+    color: var(--cor-p1);
   }
 
   .header-menu a:after {
