--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,18 +1,19 @@
+.background {
+  background: linear-gradient(
+    270deg,
+    var(--cor-0) 51.32%,
+    #264fb2 51.42%,
+    #345ec2 95.49%
+  );
+}
+
 .introducao-bg {
-  background: linear-gradient(121.91deg, #345ec2 5.33%, #113896 93.8%);
-  color: #fff;
   box-shadow: inset 0 -120px #fff;
 }
 
 .introducao {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 0 40px;
-  max-width: 1200px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .introducao-conteudo {
@@ -21,41 +22,56 @@
   padding-bottom: 200px;
 }
 
+.introducao-imagem {
+  margin-left: -80px;
+  display: grid;
+}
+
 .introducao img {
-  height: 100%;
   object-fit: cover;
-  border-radius: 4px;
+}
+
+.introducao img:nth-of-type(1) {
+  grid-area: 1/1;
+}
+
+.introducao img:nth-of-type(2) {
+  width: 350px;
+
+  grid-area: 1/1;
+  place-self: center;
+  justify-self: start;
+  margin-top: 165px;
+  margin-left: 45px;
 }
 
 .introducao h1 {
   margin-bottom: 32px;
+  position: relative;
+  z-index: 1;
 }
 
 .introducao p {
   margin-bottom: 20px;
-
-  color: #b2b2b2;
-}
-
-@media (max-width: 1200px) {
-  .introducao h1 {
-    font-size: 48px;
-  }
-
-  .introducao p {
-    font-size: 18px;
-  }
+  max-width: 35ch;
 }
 
 @media (max-width: 800px) {
+  .background {
+    background: var(--cor-p4);
+    margin-bottom: 60px;
+  }
+
   .introducao-bg {
     padding-top: 40px;
-    box-shadow: inset 0 -60px;
+    box-shadow: inset 0 clamp(-250px, -300px, -350px);
+    background: var(--cor-p1);
   }
 
   .introducao {
     grid-template-columns: 1fr;
     gap: 32px;
+    padding-right: 20px;
   }
 
   .introducao-conteudo {
@@ -64,12 +80,24 @@
   }
 
   .introducao h1 {
-    font-size: 32px;
     margin-bottom: 16px;
   }
 
   .introducao img {
-    height: 300px;
+    width: 100%;
+  }
+
+  .introducao-imagem {
+    margin: 0;
+  }
+
+  .introducao img:nth-of-type(1) {
+    margin-bottom: 12px;
+  }
+
+  .introducao img:nth-of-type(2) {
+    margin: 0;
+    grid-area: auto;
     width: 100%;
   }
 }
