--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,16 +1,23 @@
+.container {
+  max-width: 1200px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .botao {
-  font-family: 'Saira', sans-serif;
-  font-weight: 600;
+  font: 600 1.8rem/1.33 'Saira', sans-serif;
+
   display: inline-block;
   padding: 16px 32px;
-  font-size: 18px;
-  line-height: 1.33;
   background: linear-gradient(#061040, #020726);
   border-radius: 4px;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
   text-transform: uppercase;
   color: #d2dcf4;
   transition: 0.4s;
+  cursor: pointer;
 }
 
 .botao:hover {
@@ -20,6 +27,6 @@
 @media (max-width: 600px) {
   .botao {
     padding: 12px 16px;
-    font-size: 16px;
+    font-size: 1.6rem;
   }
 }
