Ajustes no CSS e HTML  e inicio da seçao de reparos

--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -7,42 +7,15 @@
   );
 }
 
-.introducao-bg {
-  box-shadow: inset 0 -120px #fff;
-}
-
 .introducao {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  margin-bottom: 120px;
 }
 
 .introducao-conteudo {
   align-self: end;
-  margin-top: 120px;
-  padding-bottom: 200px;
-}
-
-.introducao-imagem {
-  margin-left: -80px;
-  display: grid;
-}
-
-.introducao img {
-  object-fit: cover;
-}
-
-.introducao img:nth-of-type(1) {
-  grid-area: 1/1;
-}
-
-.introducao img:nth-of-type(2) {
-  width: 350px;
-
-  grid-area: 1/1;
-  place-self: center;
-  justify-self: start;
-  margin-top: 165px;
-  margin-left: 45px;
+  margin-bottom: 120px;
 }
 
 .introducao h1 {
@@ -54,6 +27,22 @@
 .introducao p {
   margin-bottom: 20px;
   max-width: 35ch;
+}
+
+.introducao-imagem {
+  margin-left: -80px;
+  display: grid;
+}
+
+.introducao-imagem picture:nth-of-type(2) {
+  place-self: center;
+  justify-self: start;
+  margin-top: -113px;
+  margin-left: 45px;
+}
+
+.introducao-imagem img {
+  object-fit: cover;
 }
 
 @media (max-width: 800px) {
@@ -70,34 +59,34 @@
 
   .introducao {
     grid-template-columns: 1fr;
+    margin-bottom: 60px;
     gap: 32px;
-    padding-right: 20px;
   }
 
   .introducao-conteudo {
-    padding-bottom: 0;
     margin-top: 0;
+    margin-bottom: 0;
   }
 
   .introducao h1 {
     margin-bottom: 16px;
   }
 
-  .introducao img {
-    width: 100%;
-  }
-
   .introducao-imagem {
     margin: 0;
   }
 
-  .introducao img:nth-of-type(1) {
+  .introducao-imagem picture:nth-of-type(1) {
     margin-bottom: 12px;
   }
 
-  .introducao img:nth-of-type(2) {
+  .introducao-imagem picture:nth-of-type(2) {
     margin: 0;
     grid-area: auto;
+    width: 100%;
+  }
+
+  .introducao-imagem img {
     width: 100%;
   }
 }
