--- a/css/global/header.css
+++ b/css/global/header.css
@@ -4,10 +4,8 @@
   gap: 20px;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .header-menu {
@@ -22,7 +20,7 @@
   position: relative;
 }
 
-.header-menu a:after {
+.header-menu a::after {
   content: '';
   display: block;
   height: 2px;
@@ -33,7 +31,7 @@
   position: absolute;
 }
 
-.header-menu a:hover:after {
+.header-menu a:hover::after {
   width: 100%;
 }
 
@@ -55,7 +53,7 @@
     color: var(--cor-p1);
   }
 
-  .header-menu a:after {
+  .header-menu a::after {
     display: none;
   }
 }
