--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,4 @@
 @import './home/introducao.css';
 @import './sobre/sobre.css';
 @import './reparo/reparo.css';
+@import './depoimentos/depoimentos.css';
