--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,4 @@
 @import './sobre/sobre.css';
 @import './reparo/reparo.css';
 @import './depoimentos/depoimentos.css';
+@import './global/footer.css';
