--- a/css/global/global.css
+++ b/css/global/global.css
@@ -8,9 +8,12 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
-  padding-bottom: 600px;
 }
 
 ul {
