--- a/css/utilidades/tipografia.css
+++ b/css/utilidades/tipografia.css
@@ -68,9 +68,16 @@
     font-size: 3.2rem;
   }
 
-  .font-1-xl,
-  .font-2-l {
+  .font-1-xl {
     font-size: 2.4rem;
+  }
+
+  .font-1-m {
+    font-size: 2rem;
+  }
+
+  .font-2-l {
+    font-size: 2rem;
   }
 }
 
